# single-cell-nanopore

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README_t.md  Snakefile  Snakefile.slurm  cluster.json  config.yaml  do_stats.sh  environment.yaml  report.rmd  workflow.md
adhoc/: README.md
analysis/: SRSF2.GFP-.bam  gene  reads_per_barcode  real.label  real.prob  real_umi.fasta  sim.model.rda
data/: Nanopore.bam  possorted_genome_bam.bam  possorted_genome_bam.bam.bai
data_output/: SRSF2.GFP+.bam  whitelist.fa
pipelines/: README.md  add_label.r  add_umi.pl  analysis.md  build_model.r  fa2sam.pl  fa2sams.pl  find_dist.r  get_firstread.pl  get_gene_umi.pl  gtruth.pl  pred.r  report.rmd  sim_bench.r  simreads.py  tsne.r  umialign.pl  workflow.md  write_sh.pl
posthoc/: README.md
posthoc/test/: model.txt  nanopore.bam  nanopore.bam.bai  ref.fa  ref.fa.fai  test.txt
src/: CMakeLists.txt  Flexbar.cpp  Flexbar.h  FlexbarIO.h  FlexbarTypes.h  LoadFasta.h  Options.h  PairedAlign.h  PairedInput.h  PairedOutput.h  SeqAlign.h  SeqAlignAlgo.h  SeqInput.h  SeqOutput.h  extractReads.h  removeCDNA.h  splitReads.h
test/: EIF4A3.gtf  annot.gtf  cb.fa  illumina.bam  illumina.bam.bai  last_exon_EIF4A3_nanopore.bam  model.txt  nanopore.bam  nanopore.bam.bai  output.txt  ref.fa  ref.fa.fai
test/EIF4A3_results/: EIF4A3.stats  EIF4A3_P1.fastq  commands
